// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewActions component component snapshot: do not show rubric 1`] = `
<div>
  <ActionRow
    className="review-actions"
  >
    <span
      className="review-actions-username"
    >
      <span
        className="lead"
      >
        test-username
      </span>
      <StatusBadge
        className="review-actions-status mr-3"
        status="grading-status"
      />
      <span
        className="small"
      >
        Score: 3/10
      </span>
    </span>
    <div
      className="review-actions-group"
    >
      <Button
        onClick={[MockFunction this.props.toggleShowRubric]}
        variant="outline-primary"
      >
        Show
         Rubric
      </Button>
      <StartGradingButton />
      <SubmissionNavigation />
    </div>
  </ActionRow>
</div>
`;

exports[`ReviewActions component component snapshot: show rubric, no score 1`] = `
<div>
  <ActionRow
    className="review-actions"
  >
    <span
      className="review-actions-username"
    >
      <span
        className="lead"
      >
        test-username
      </span>
      <StatusBadge
        className="review-actions-status mr-3"
        status="grading-status"
      />
      <span
        className="small"
      />
    </span>
    <div
      className="review-actions-group"
    >
      <Button
        onClick={[MockFunction this.props.toggleShowRubric]}
        variant="outline-primary"
      >
        Hide
         Rubric
      </Button>
      <StartGradingButton />
      <SubmissionNavigation />
    </div>
  </ActionRow>
</div>
`;
